Retarget patient archive tool to Java 8
Runs on the JRE bundled with the Avicenna client (jre8/jdk8) with no
separate Java install. Replaces Java 9+ APIs (List.of, Path.of,
String.isBlank, var) with Java 8 equivalents and pins the compiler to
release 8 so nothing newer slips back in.